# ws-demo

./: README.md  pyproject.toml
src/: broker.py  main.py  splitter.py
