[project]
name = "ws-test"
version = "0.1.0"
description = ""
authors = [
    {name = "prasad-kumkar",email = "prasad@chainscore.finance"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "quart (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
